Revert "Merge branch '7.0.x' into 6.2.x"
This reverts commit abaaa87ef07002f322d1c8f642f8186cce8849fe, reversing
changes made to a9491c06e8e9158e60a40a4487dac8e453cd7f22.