@@ -1,11 +1,11 @@
 /*
- * Copyright 2004-2024 the original author or authors.
+ * Copyright 2004-2005 Graeme Rocher
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
  *
- *      https://www.apache.org/licenses/LICENSE-2.0
+ *      http://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
@@ -16,14 +16,27 @@
 package org.grails.web.mapping;
 
 import grails.core.GrailsApplication;
+import grails.core.GrailsControllerClass;
 import grails.core.support.ClassLoaderAware;
 import grails.gorm.validation.ConstrainedProperty;
 import grails.gorm.validation.DefaultConstrainedProperty;
+import grails.io.IOUtils;
+import grails.plugins.GrailsPluginManager;
+import grails.plugins.PluginManagerAware;
 import grails.util.GrailsUtil;
-import grails.web.mapping.*;
+import grails.web.mapping.UrlMapping;
+import grails.web.mapping.UrlMappingData;
+import grails.web.mapping.UrlMappingEvaluator;
+import grails.web.mapping.UrlMappingParser;
 import grails.web.mapping.exceptions.UrlMappingException;
-import groovy.lang.*;
+import groovy.lang.Binding;
+import groovy.lang.Closure;
+import groovy.lang.GroovyClassLoader;
+import groovy.lang.GroovyObject;
+import groovy.lang.GroovyObjectSupport;
+import groovy.lang.Script;
 import org.codehaus.groovy.runtime.IOGroovyMethods;
+import org.grails.datastore.gorm.validation.constraints.builder.ConstrainedPropertyBuilder;
 import org.grails.datastore.gorm.validation.constraints.eval.ConstraintsEvaluator;
 import org.grails.datastore.gorm.validation.constraints.eval.DefaultConstraintEvaluator;
 import org.grails.datastore.gorm.validation.constraints.registry.ConstraintRegistry;
@@ -40,15 +53,20 @@ import org.springframework.http.HttpMethod;
 import org.springframework.util.Assert;
 import org.springframework.web.context.WebApplicationContext;
 
-import jakarta.servlet.ServletContext;
+import javax.servlet.ServletContext;
 import java.io.IOException;
 import java.io.InputStream;
-import java.io.Serial;
 import java.net.URI;
 import java.net.URISyntaxException;
-import java.util.*;
-
-import static grails.web.mapping.UrlMapping.*;
+import java.util.ArrayDeque;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Collections;
+import java.util.Deque;
+import java.util.HashMap;
+import java.util.LinkedHashMap;
+import java.util.List;
+import java.util.Map;
 
 /**
  * <p>A UrlMapping evaluator that evaluates Groovy scripts that are in the form:</p>
@@ -71,9 +89,7 @@ import static grails.web.mapping.UrlMapping.*;
  * @author Graeme Rocher
  * @since 0.5
  */
-public class DefaultUrlMappingEvaluator implements UrlMappingEvaluator, ClassLoaderAware {
-
-    private static final Logger log = LoggerFactory.getLogger(UrlMappingBuilder.class);
+public class DefaultUrlMappingEvaluator implements UrlMappingEvaluator, ClassLoaderAware, PluginManagerAware {
 
     public static final String ACTION_CREATE = "create";
     public static final String ACTION_INDEX = "index";
@@ -83,28 +99,20 @@ public class DefaultUrlMappingEvaluator implements UrlMappingEvaluator, ClassLoa
     public static final String ACTION_PATCH = "patch";
     public static final String ACTION_DELETE = "delete";
     public static final String ACTION_SAVE = "save";
-
-    public static final List<String> DEFAULT_RESOURCES_INCLUDES = List.of(
-            ACTION_INDEX, ACTION_CREATE, ACTION_SAVE, ACTION_SHOW,
-            ACTION_EDIT, ACTION_UPDATE, ACTION_PATCH, ACTION_DELETE
-    );
-    public static final List<String> DEFAULT_RESOURCE_INCLUDES = List.of(
-            ACTION_CREATE, ACTION_SAVE, ACTION_SHOW, ACTION_EDIT,
-            ACTION_UPDATE, ACTION_PATCH, ACTION_DELETE
-    );
-
+    public static final List<String> DEFAULT_RESOURCES_INCLUDES = Arrays.asList(ACTION_INDEX, ACTION_CREATE, ACTION_SAVE, ACTION_SHOW, ACTION_EDIT, ACTION_UPDATE, ACTION_PATCH, ACTION_DELETE);
+    public static final List<String> DEFAULT_RESOURCE_INCLUDES = Arrays.asList(ACTION_CREATE, ACTION_SAVE, ACTION_SHOW, ACTION_EDIT, ACTION_UPDATE, ACTION_PATCH, ACTION_DELETE);
+    private static final Logger LOG = LoggerFactory.getLogger(UrlMappingBuilder.class);
     private GroovyClassLoader classLoader = new GroovyClassLoader();
-    private final UrlMappingParser urlParser = new DefaultUrlMappingParser();
-
+    private UrlMappingParser urlParser = new DefaultUrlMappingParser();
     private static final String EXCEPTION = "exception";
     private static final String PARSE_REQUEST = "parseRequest";
     private static final String SINGLE = "single";
     private static final String RESOURCE = "resource";
     private static final String RESOURCES = "resources";
 
-    private final ApplicationContext applicationContext;
+    private GrailsPluginManager pluginManager;
+    private ApplicationContext applicationContext;
     private GrailsApplication grailsApplication;
-
     private final ConstraintRegistry constraintRegistry;
     private final ConstraintsEvaluator constraintsEvaluator;
 
@@ -125,91 +133,106 @@ public class DefaultUrlMappingEvaluator implements UrlMappingEvaluator, ClassLoa
             try {
                 constraintEvaluator = applicationContext.getBean(ConstraintsEvaluator.class);
             } catch (BeansException e) {
-                constraintEvaluator = new DefaultConstraintEvaluator(constraintRegistry, new KeyValueMappingContext("test"), Collections.emptyMap());
+                constraintEvaluator = new DefaultConstraintEvaluator(constraintRegistry, new KeyValueMappingContext("test"), Collections.<String, Object>emptyMap());
             }
             this.constraintsEvaluator = constraintEvaluator;
-
-        } else {
-            var messageSource = new StaticMessageSource();
+        }
+        else {
+            StaticMessageSource messageSource = new StaticMessageSource();
             this.constraintRegistry = new DefaultConstraintRegistry(messageSource);
             this.constraintsEvaluator = new DefaultConstraintEvaluator(messageSource);
         }
     }
 
-    @Override
-    public List<UrlMapping> evaluateMappings(Resource resource) {
-        try (InputStream inputStream = resource.getInputStream()) {
+    @SuppressWarnings({"rawtypes", "unchecked"})
+    public List evaluateMappings(Resource resource) {
+        InputStream inputStream = null;
+        try {
+            inputStream = resource.getInputStream();
             return evaluateMappings(classLoader.parseClass(IOGroovyMethods.getText(inputStream, "UTF-8")));
         } catch (IOException e) {
             throw new UrlMappingException("Unable to read mapping file [" + resource.getFilename() + "]: " + e.getMessage(), e);
+        } finally {
+            IOUtils.closeQuietly(inputStream);
         }
     }
 
-    @Override
-    public List<UrlMapping> evaluateMappings(Class<?> mappingsClass) {
-        GroovyObject obj = (GroovyObject) BeanUtils.instantiateClass(mappingsClass);
+    @SuppressWarnings({"unchecked", "rawtypes"})
+    public List<UrlMapping> evaluateMappings(Class theClass) {
+        GroovyObject obj = (GroovyObject) BeanUtils.instantiateClass(theClass);
+
         if (obj instanceof Script) {
             Script script = (Script) obj;
-            Binding binding = new Binding();
+            Binding b = new Binding();
+
             MappingCapturingClosure closure = new MappingCapturingClosure(script);
-            binding.setVariable("mappings", closure);
-            script.setBinding(binding);
+            b.setVariable("mappings", closure);
+            script.setBinding(b);
+
             script.run();
-            var mappingsClosure = closure.getMappings();
-            return evaluateMappings(mappingsClosure, script.getBinding());
+
+            Closure mappings = closure.getMappings();
+
+            Binding binding = script.getBinding();
+            return evaluateMappings(script, mappings, binding);
         }
-        throw new UrlMappingException("Unable to configure URL mappings for class [" +
-                mappingsClass + "]. A URL mapping must be an instance of groovy.lang.Script.");
+
+        throw new UrlMappingException("Unable to configure URL mappings for class [" + theClass +
+                "]. A URL mapping must be an instance of groovy.lang.Script.");
     }
 
-    private List<UrlMapping> evaluateMappings(Closure<?> mappings, Binding binding) {
-        var builder = new UrlMappingBuilder(binding);
+    private List<UrlMapping> evaluateMappings(GroovyObject go, Closure<?> mappings, Binding binding) {
+        UrlMappingBuilder builder = new UrlMappingBuilder(binding);
         mappings.setDelegate(builder);
         mappings.call();
         builder.urlDefiningMode = false;
+
         return builder.getUrlMappings();
     }
 
-    @Override
-    public List<UrlMapping> evaluateMappings(Closure<?> mappingsClosure) {
-        var builder = new UrlMappingBuilder((Binding) null);
-        mappingsClosure.setDelegate(builder);
-        mappingsClosure.setResolveStrategy(Closure.DELEGATE_FIRST);
-        if (mappingsClosure.getParameterTypes().length == 0) {
-            mappingsClosure.call();
+    @SuppressWarnings("rawtypes")
+    public List<UrlMapping> evaluateMappings(Closure closure) {
+        UrlMappingBuilder builder = new UrlMappingBuilder((Binding) null);
+        closure.setDelegate(builder);
+        closure.setResolveStrategy(Closure.DELEGATE_FIRST);
+        if (closure.getParameterTypes().length == 0) {
+            closure.call();
         } else {
-            mappingsClosure.call(applicationContext);
+            closure.call(applicationContext);
         }
         builder.urlDefiningMode = false;
         return builder.getUrlMappings();
     }
 
-    @Override
     public void setClassLoader(ClassLoader classLoader) {
-        Assert.isInstanceOf(GroovyClassLoader.class, classLoader, "Property [classLoader] must be an instance of GroovyClassLoader");
+        Assert.isInstanceOf(GroovyClassLoader.class, classLoader,
+                "Property [classLoader] must be an instance of GroovyClassLoader");
         this.classLoader = (GroovyClassLoader) classLoader;
+    }
+
+    public void setPluginManager(GrailsPluginManager pluginManager) {
+        this.pluginManager = pluginManager;
     }
 
     /**
      * A Closure that captures a call to a method that accepts a single closure
      */
-    static class MappingCapturingClosure extends Closure<UrlMapping> {
+    @SuppressWarnings("rawtypes")
+    class MappingCapturingClosure extends Closure {
 
-        @Serial
         private static final long serialVersionUID = 2108155626252742722L;
-
         private Closure<?> mappings;
 
         public Closure<?> getMappings() {
             return mappings;
         }
 
-        public MappingCapturingClosure(Script o) {
+        public MappingCapturingClosure(Object o) {
             super(o);
         }
 
         @Override
-        public UrlMapping call(Object... args) {
+        public Object call(Object... args) {
             if (args.length > 0 && (args[0] instanceof Closure)) {
                 mappings = (Closure<?>) args[0];
             }
@@ -220,27 +243,26 @@ public class DefaultUrlMappingEvaluator implements UrlMappingEvaluator, ClassLoa
     /**
      * <p>A modal builder that constructs a UrlMapping instances by executing a closure. The class overrides
      * getProperty(name) and allows the substitution of GString values with the * wildcard.
-     *
-     * <p>invokeMethod(methodName, args) is also overridden for the creation of each UrlMapping instance
+     * <p/>
+     * <p>invokeMethod(methodName, args) is also overriden for the creation of each UrlMapping instance
      */
+    @SuppressWarnings("rawtypes")
     class UrlMappingBuilder extends GroovyObjectSupport {
-
         private static final String CAPTURING_WILD_CARD = UrlMapping.CAPTURED_WILDCARD;
         private static final String SLASH = "/";
         private static final String CONSTRAINTS = "constraints";
 
         private boolean urlDefiningMode = true;
-        // private boolean inGroupConstraints = false; // this variable seems to always be false
+        private boolean inGroupConstraints = false;
         private List<ConstrainedProperty> previousConstraints = new ArrayList<>();
         private List<UrlMapping> urlMappings = new ArrayList<>();
-        private Map<String,Object> parameterValues = new HashMap<>();
+        private Map<String, Object> parameterValues = new HashMap<>();
+        private Binding binding;
         private Object exception;
         private Object parseRequest;
         private Deque<ParentResource> parentResources = new ArrayDeque<>();
         private Deque<MetaMappingInfo> mappingInfoDeque = new ArrayDeque<>();
         private boolean isInCollection;
-
-        private final Binding binding;
 
         public UrlMappingBuilder(Binding binding) {
             this.binding = binding;
@@ -250,15 +272,13 @@ public class DefaultUrlMappingEvaluator implements UrlMappingEvaluator, ClassLoa
             this(parent.binding);
             urlDefiningMode = parent.urlDefiningMode;
             previousConstraints = parent.previousConstraints;
-            //inGroupConstraints = parent.inGroupConstraints; // this variable seems to always be false
+            inGroupConstraints = parent.inGroupConstraints;
             urlMappings = parent.urlMappings;
             parameterValues = parent.parameterValues;
             exception = parent.exception;
             parseRequest = parent.parseRequest;
             parentResources = parent.parentResources;
             mappingInfoDeque = parent.mappingInfoDeque;
-            // Is not copied. Right or wrong?
-            //isInCollection = parent.isInCollection;
         }
 
         public List<UrlMapping> getUrlMappings() {
@@ -266,7 +286,7 @@ public class DefaultUrlMappingEvaluator implements UrlMappingEvaluator, ClassLoa
         }
 
         public ServletContext getServletContext() {
-            var ctx = getApplicationContext();
+            final ApplicationContext ctx = getApplicationContext();
             if (ctx instanceof WebApplicationContext) {
                 return ((WebApplicationContext) ctx).getServletContext();
             }
@@ -284,7 +304,7 @@ public class DefaultUrlMappingEvaluator implements UrlMappingEvaluator, ClassLoa
         @Override
         public Object getProperty(String name) {
             if (urlDefiningMode) {
-                var newConstrained = new DefaultConstrainedProperty(UrlMapping.class, name, String.class, constraintRegistry);
+                final ConstrainedProperty newConstrained = new DefaultConstrainedProperty(UrlMapping.class, name, String.class, DefaultUrlMappingEvaluator.this.constraintRegistry);
                 previousConstraints.add(newConstrained);
                 return CAPTURING_WILD_CARD;
             }
@@ -372,19 +392,19 @@ public class DefaultUrlMappingEvaluator implements UrlMappingEvaluator, ClassLoa
         /**
          * Define a group
          *
-         * @param uri The URI
-         * @param mappingsClosure The mappings in the group
+         * @param uri      The URI
+         * @param mappings The mappings
          */
-        public void group(String uri, Closure<?> mappingsClosure) {
+        public void group(String uri, Closure mappings) {
             try {
-                var parentResource = new ParentResource(null, uri, true, true);
+                ParentResource parentResource = new ParentResource(null, uri, true, true);
                 parentResources.push(parentResource);
                 pushNewMetaMappingInfo();
-                var builder = new UrlGroupMappingRecursionBuilder(this, parentResource);
-                mappingsClosure.setDelegate(builder);
-                mappingsClosure.setResolveStrategy(Closure.DELEGATE_FIRST);
-                mappingsClosure.call();
-                // inGroupConstraints = false; // this variable seems to always be false
+                UrlGroupMappingRecursionBuilder builder = new UrlGroupMappingRecursionBuilder(this, parentResource);
+                mappings.setDelegate(builder);
+                mappings.setResolveStrategy(Closure.DELEGATE_FIRST);
+                mappings.call();
+                inGroupConstraints = false;
             } finally {
                 mappingInfoDeque.pop();
                 parentResources.pop();
@@ -423,17 +443,18 @@ public class DefaultUrlMappingEvaluator implements UrlMappingEvaluator, ClassLoa
          * @param callable the customizer
          * @return the UrlMapping
          */
-        public UrlMapping get(Map<String,String> arguments, String uri, Closure<UrlMapping> callable) {
-            arguments.put(HTTP_METHOD, HttpMethod.GET.toString());
-            return (UrlMapping) _invoke(uri, new Object[] { arguments, callable }, this);
+        public UrlMapping get(Map arguments, String uri, Closure callable) {
+            arguments.put(UrlMapping.HTTP_METHOD, HttpMethod.GET.toString());
+            return (UrlMapping) _invoke(uri, new Object[]{ arguments, callable }, this);
         }
-        public UrlMapping get(Map<String,String> arguments, String uri) {
+        public UrlMapping get(Map arguments, String uri) {
             return get(arguments, uri, null);
         }
         public UrlMapping get(RegexUrlMapping regexUrlMapping) {
             regexUrlMapping.httpMethod = HttpMethod.GET.toString();
             return regexUrlMapping;
         }
+
 
         /**
          * Matches the POST method
@@ -442,11 +463,11 @@ public class DefaultUrlMappingEvaluator implements UrlMappingEvaluator, ClassLoa
          * @param uri The URI
          * @return the UrlMapping
          */
-        public UrlMapping post(Map<String,Object> arguments, String uri, Closure<?> callable) {
-            arguments.put(HTTP_METHOD, HttpMethod.POST);
-            return (UrlMapping) _invoke(uri, new Object[] { arguments, callable }, this);
+        public UrlMapping post(Map arguments, String uri, Closure callable) {
+            arguments.put(UrlMapping.HTTP_METHOD, HttpMethod.POST);
+            return (UrlMapping) _invoke(uri, new Object[]{ arguments, callable }, this);
         }
-        public UrlMapping post(Map<String,Object> arguments, String uri) {
+        public UrlMapping post(Map arguments, String uri) {
             return post(arguments, uri, null);
         }
         public UrlMapping post(RegexUrlMapping regexUrlMapping) {
@@ -461,11 +482,11 @@ public class DefaultUrlMappingEvaluator implements UrlMappingEvaluator, ClassLoa
          * @param uri The URI
          * @return the UrlMapping
          */
-        public UrlMapping put(Map<String,Object> arguments, String uri, Closure<?> callable) {
-            arguments.put(HTTP_METHOD, HttpMethod.PUT);
+        public UrlMapping put(Map arguments, String uri, Closure callable) {
+            arguments.put(UrlMapping.HTTP_METHOD, HttpMethod.PUT);
             return (UrlMapping) _invoke(uri, new Object[]{ arguments, callable }, this);
         }
-        public UrlMapping put(Map<String,Object> arguments, String uri) {
+        public UrlMapping put(Map arguments, String uri) {
             return put(arguments, uri, null);
         }
         public UrlMapping put(RegexUrlMapping regexUrlMapping) {
@@ -480,11 +501,11 @@ public class DefaultUrlMappingEvaluator implements UrlMappingEvaluator, ClassLoa
          * @param uri The URI
          * @return the UrlMapping
          */
-        public UrlMapping patch(Map<String,Object> arguments, String uri, Closure<?> callable) {
-            arguments.put(HTTP_METHOD, HttpMethod.PATCH);
+        public UrlMapping patch(Map arguments, String uri, Closure callable) {
+            arguments.put(UrlMapping.HTTP_METHOD, HttpMethod.PATCH);
             return (UrlMapping) _invoke(uri, new Object[]{ arguments, callable }, this);
         }
-        public UrlMapping patch(Map<String,Object> arguments, String uri) {
+        public UrlMapping patch(Map arguments, String uri) {
             return patch(arguments, uri, null);
         }
         public UrlMapping patch(RegexUrlMapping regexUrlMapping) {
@@ -499,11 +520,11 @@ public class DefaultUrlMappingEvaluator implements UrlMappingEvaluator, ClassLoa
          * @param uri The URI
          * @return the UrlMapping
          */
-        public UrlMapping delete(Map<String,Object> arguments, String uri, Closure<?> callable) {
-            arguments.put(HTTP_METHOD, HttpMethod.DELETE);
+        public UrlMapping delete(Map arguments, String uri, Closure callable) {
+            arguments.put(UrlMapping.HTTP_METHOD, HttpMethod.DELETE);
             return (UrlMapping) _invoke(uri, new Object[]{ arguments, callable }, this);
         }
-        public UrlMapping delete(Map<String,Object> arguments, String uri) {
+        public UrlMapping delete(Map arguments, String uri) {
             return delete(arguments, uri, null);
         }
         public UrlMapping delete(RegexUrlMapping regexUrlMapping) {
@@ -517,11 +538,11 @@ public class DefaultUrlMappingEvaluator implements UrlMappingEvaluator, ClassLoa
          * @param uri The URI
          * @return the UrlMapping
          */
-        public UrlMapping head(Map<String,Object> arguments, String uri, Closure<?> callable) {
-            arguments.put(HTTP_METHOD, HttpMethod.HEAD);
+        public UrlMapping head(Map arguments, String uri, Closure callable) {
+            arguments.put(UrlMapping.HTTP_METHOD, HttpMethod.HEAD);
             return (UrlMapping) _invoke(uri, new Object[]{ arguments, callable }, this);
         }
-        public UrlMapping head(Map<String,Object> arguments, String uri) {
+        public UrlMapping head(Map arguments, String uri) {
             return head(arguments, uri, null);
         }
         public UrlMapping head(RegexUrlMapping regexUrlMapping) {
@@ -536,90 +557,88 @@ public class DefaultUrlMappingEvaluator implements UrlMappingEvaluator, ClassLoa
          * @param uri The URI
          * @return the UrlMapping
          */
-        public UrlMapping options(Map<String,Object> arguments, String uri, Closure<?> callable) {
-            arguments.put(HTTP_METHOD, HttpMethod.OPTIONS);
+        public UrlMapping options(Map arguments, String uri, Closure callable) {
+            arguments.put(UrlMapping.HTTP_METHOD, HttpMethod.OPTIONS);
             return (UrlMapping) _invoke(uri, new Object[]{ arguments, callable }, this);
         }
-        public UrlMapping options(Map<String,Object> arguments, String uri) {
+        public UrlMapping options(Map arguments, String uri) {
             return options(arguments, uri, null);
         }
         public UrlMapping options(RegexUrlMapping regexUrlMapping) {
             regexUrlMapping.httpMethod = HttpMethod.OPTIONS.toString();
             return regexUrlMapping;
         }
-
         /**
          * Define Url mapping collections that are nested directly below the parent resource (without the id)
          *
          * @param callable The callable
          */
-        public void collection(Closure<?> callable) {
-            var previousState = isInCollection;
-            isInCollection = true;
+        public void collection(Closure callable) {
+            boolean previousState = isInCollection;
+            this.isInCollection = true;
             try {
                 callable.setDelegate(this);
                 callable.call();
             } finally {
-                isInCollection = previousState;
+                isInCollection = previousState ;
             }
         }
 
         /**
-         * Define Url mapping members that are nested directly below the parent resource and resource id
+         * Define Url mapping members that are nested directly below  the parent resource and resource id
          *
          * @param callable The callable
          */
-        public void members(Closure<?> callable) {
+        public void members(Closure callable) {
             boolean previousState = isInCollection;
-            isInCollection = false;
+            this.isInCollection = false;
             try {
                 callable.setDelegate(this);
                 callable.call();
             } finally {
-                isInCollection = previousState;
+                isInCollection = previousState ;
             }
         }
 
         private Object _invoke(String methodName, Object arg, Object delegate) {
             try {
-                var mappingInfo = pushNewMetaMappingInfo();
-                var currentConstraints = mappingInfo.getConstraints();
-                var args = (Object[]) arg;
-                var mappedURI = establishFullURI(methodName);
-                var isResponseCode = isResponseCode(mappedURI);
+                MetaMappingInfo mappingInfo = pushNewMetaMappingInfo();
+                List<ConstrainedProperty> currentConstraints = mappingInfo.getConstraints();
+                Object[] args = (Object[]) arg;
+                String mappedURI = establishFullURI(methodName, currentConstraints);
+                final boolean isResponseCode = isResponseCode(mappedURI);
                 if (mappedURI.startsWith(SLASH) || isResponseCode) {
                     // Create a new parameter map for this mapping.
-                    parameterValues = new HashMap<>();
-                    Map<?,?> variables = binding != null ? binding.getVariables() : null;
+                    parameterValues = new HashMap<String, Object>();
+                    Map variables = binding != null ? binding.getVariables() : null;
                     boolean hasParent = !parentResources.isEmpty();
                     try {
                         if (!hasParent) {
                             urlDefiningMode = false;
                         }
-                        args = args != null && args.length > 0 ? args : new Object[] {Collections.emptyMap()};
-                        if (args[0] instanceof Closure<?>) {
+                        args = args != null && args.length > 0 ? args : new Object[]{Collections.emptyMap()};
+                        if (args[0] instanceof Closure) {
                             UrlMappingData urlData = createUrlMappingData(mappedURI, isResponseCode);
 
-                            Closure<?> callable = (Closure<?>) args[0];
-
+                            Closure callable = (Closure) args[0];
                             if (delegate != null) {
                                 callable.setDelegate(delegate);
                             }
                             callable.call();
 
                             if (binding != null) {
-                                mappingInfo.setController(variables.get(CONTROLLER));
-                                mappingInfo.setAction(variables.get(ACTION));
-                                mappingInfo.setView(variables.get(VIEW));
+                                mappingInfo.setController(variables.get(GrailsControllerClass.CONTROLLER));
+                                mappingInfo.setAction(variables.get(GrailsControllerClass.ACTION));
+                                mappingInfo.setView(variables.get(GrailsControllerClass.VIEW));
                                 mappingInfo.setUri(variables.get(UrlMapping.URI));
-                                mappingInfo.setPlugin(variables.get(PLUGIN));
-                                mappingInfo.setNamespace(variables.get(NAMESPACE));
-                                if (variables.containsKey(HTTP_METHOD)) {
-                                    mappingInfo.setHttpMethod(variables.get(HTTP_METHOD).toString());
+                                mappingInfo.setPlugin(variables.get(UrlMapping.PLUGIN));
+                                mappingInfo.setNamespace(variables.get(UrlMapping.NAMESPACE));
+                                if (variables.containsKey(UrlMapping.HTTP_METHOD)) {
+                                    mappingInfo.setHttpMethod(variables.get(UrlMapping.HTTP_METHOD).toString());
                                 }
                             }
 
-                            var constraints = currentConstraints.toArray(new ConstrainedProperty[0]);
+                            ConstrainedProperty[] constraints = currentConstraints.toArray(new ConstrainedProperty[currentConstraints.size()]);
                             UrlMapping urlMapping;
                             if (mappingInfo.getUri() != null) {
                                 try {
@@ -632,7 +651,8 @@ public class DefaultUrlMappingEvaluator implements UrlMappingEvaluator, ClassLoa
                             }
 
                             if (binding != null) {
-                                Object parse = getParseRequest(Collections.emptyMap(), variables);
+                                Map bindingVariables = variables;
+                                Object parse = getParseRequest(Collections.emptyMap(), bindingVariables);
                                 if (parse instanceof Boolean) {
                                     urlMapping.setParseRequest((Boolean) parse);
                                 }
@@ -642,20 +662,22 @@ public class DefaultUrlMappingEvaluator implements UrlMappingEvaluator, ClassLoa
                         }
 
                         if (args[0] instanceof Map) {
-                            Map<?,?> namedArguments = (Map<?,?>) args[0];
+                            Map namedArguments = (Map) args[0];
+                            String uri = mappedURI;
                             String version = null;
 
                             if (namedArguments.containsKey(UrlMapping.VERSION)) {
                                 version = namedArguments.get(UrlMapping.VERSION).toString();
                             }
-                            if (namedArguments.containsKey(NAMESPACE)) {
-                                mappingInfo.setNamespace(namedArguments.get(NAMESPACE).toString());
-                            }
-                            if (namedArguments.containsKey(PLUGIN)) {
-                                mappingInfo.setPlugin(namedArguments.get(PLUGIN).toString());
+                            if (namedArguments.containsKey(UrlMapping.NAMESPACE)) {
+                                mappingInfo.setNamespace(namedArguments.get(UrlMapping.NAMESPACE).toString());
                             }
 
-                            var urlData = createUrlMappingData(mappedURI, isResponseCode);
+                            if (namedArguments.containsKey(UrlMapping.PLUGIN)) {
+                                mappingInfo.setPlugin(namedArguments.get(UrlMapping.PLUGIN).toString());
+                            }
+
+                            UrlMappingData urlData = createUrlMappingData(uri, isResponseCode);
 
                             if (namedArguments.containsKey(RESOURCE) || namedArguments.containsKey(SINGLE)) {
                                 Object controller;
@@ -665,20 +687,23 @@ public class DefaultUrlMappingEvaluator implements UrlMappingEvaluator, ClassLoa
                                 } else {
                                     controller = namedArguments.get(SINGLE);
                                 }
-                                var controllerName = controller.toString();
+                                String controllerName = controller.toString();
                                 mappingInfo.setController(controllerName);
-                                parentResources.push(new ParentResource(controllerName, mappedURI, true));
+                                parentResources.push(new ParentResource(controllerName, uri, true));
                                 try {
                                     invokeLastArgumentIfClosure(args);
                                 } finally {
                                     parentResources.pop();
                                 }
-                                createSingleResourceRestfulMappings(controllerName, mappingInfo.getPlugin(), mappingInfo.getNamespace(), version, urlData, currentConstraints, calculateIncludes(namedArguments, DEFAULT_RESOURCE_INCLUDES));
+                                if (controller != null) {
+
+                                    createSingleResourceRestfulMappings(controllerName, mappingInfo.getPlugin(), mappingInfo.getNamespace(), version, urlData, currentConstraints, calculateIncludes(namedArguments, DEFAULT_RESOURCE_INCLUDES));
+                                }
                             } else if (namedArguments.containsKey(RESOURCES)) {
-                                var controller = namedArguments.get(RESOURCES);
-                                var controllerName = controller.toString();
+                                Object controller = namedArguments.get(RESOURCES);
+                                String controllerName = controller.toString();
                                 mappingInfo.setController(controllerName);
-                                parentResources.push(new ParentResource(controllerName, mappedURI, false));
+                                parentResources.push(new ParentResource(controllerName, uri, false));
                                 try {
                                     urlDefiningMode = true;
                                     invokeLastArgumentIfClosure(args);
@@ -689,39 +714,43 @@ public class DefaultUrlMappingEvaluator implements UrlMappingEvaluator, ClassLoa
                                         urlDefiningMode = false;
                                     }
                                 }
-                                createResourceRestfulMappings(controllerName, mappingInfo.getPlugin(), mappingInfo.getNamespace(), version, urlData, currentConstraints, calculateIncludes(namedArguments, DEFAULT_RESOURCES_INCLUDES));
+                                if (controller != null) {
+                                    createResourceRestfulMappings(controllerName, mappingInfo.getPlugin(), mappingInfo.getNamespace(), version, urlData, currentConstraints, calculateIncludes(namedArguments, DEFAULT_RESOURCES_INCLUDES));
+                                }
                             }
                             else {
                                 invokeLastArgumentIfClosure(args);
-                                var urlMapping = getURLMappingForNamedArgs(namedArguments, urlData, mappedURI, isResponseCode, currentConstraints);
+                                UrlMapping urlMapping = getURLMappingForNamedArgs(namedArguments, urlData, mappedURI, isResponseCode, currentConstraints);
                                 configureUrlMapping(urlMapping);
                                 return urlMapping;
                             }
                         }
                         return null;
                     } finally {
-                        if (binding != null && variables != null) {
+                        if (binding != null) {
                             variables.clear();
                         }
                         if (!hasParent) {
                             urlDefiningMode = true;
                         }
                     }
-                } else if ((!urlDefiningMode || (!parentResources.isEmpty() && parentResources.peek().isGroup)) && CONSTRAINTS.equals(mappedURI)) {
-                    if (args.length > 0 && (args[0] instanceof Closure<?>)) {
-                        Closure<?> callable = (Closure<?>) args[0];
-                        var builder = constraintsEvaluator.newConstrainedPropertyBuilder(UrlMapping.class);
-                        for (var constrainedProperty : currentConstraints) {
+                } else if ((!urlDefiningMode || (parentResources.size() > 0 && parentResources.peek().isGroup)) && CONSTRAINTS.equals(mappedURI)) {
+                    if (args.length > 0 && (args[0] instanceof Closure)) {
+
+                        Closure callable = (Closure) args[0];
+                        ConstrainedPropertyBuilder builder = constraintsEvaluator.newConstrainedPropertyBuilder(UrlMapping.class);
+                        for (ConstrainedProperty constrainedProperty : currentConstraints) {
                             builder.getConstrainedProperties().put(constrainedProperty.getPropertyName(), constrainedProperty);
                         }
                         callable.setResolveStrategy(Closure.DELEGATE_FIRST);
                         callable.setDelegate(builder);
                         callable.call();
                         return builder.getConstrainedProperties();
+
                     }
                     return Collections.emptyMap();
                 } else {
-                    log.error("Mapping: '{}' does not start with {} or is response code.", mappedURI, SLASH);
+                    LOG.error("Mapping: '"+ mappedURI + "' does not start with " + SLASH + " or is response code.");
                     return super.invokeMethod(mappedURI, arg);
                 }
             } finally {
@@ -729,16 +758,18 @@ public class DefaultUrlMappingEvaluator implements UrlMappingEvaluator, ClassLoa
             }
         }
 
-        private List<String> calculateIncludes(Map<?,?> namedArguments, List<String> defaultResourcesIncludes) {
-            List<String> includes = new ArrayList<>(defaultResourcesIncludes);
+        private List<String> calculateIncludes(Map namedArguments, List<String> defaultResourcesIncludes) {
+            List<String> includes = new ArrayList<String>(defaultResourcesIncludes);
 
             Object excludesObject = namedArguments.get("excludes");
             if (excludesObject != null) {
-                if (excludesObject instanceof List<?>) {
-                    List<?> excludeList = (List<?>) excludesObject;
+                if (excludesObject instanceof List) {
+
+                    List excludeList = (List) excludesObject;
                     for (Object exc : excludeList) {
                         if (exc != null) {
-                            includes.remove(exc.toString().toLowerCase());
+                            String excStr = exc.toString().toLowerCase();
+                            includes.remove(excStr);
                         }
                     }
                 } else {
@@ -747,12 +778,14 @@ public class DefaultUrlMappingEvaluator implements UrlMappingEvaluator, ClassLoa
             }
             Object includesObject = namedArguments.get("includes");
             if (includesObject != null) {
-                if (includesObject instanceof List<?>) {
-                    List<?> includeList = (List<?>) includesObject;
+                if (includesObject instanceof List) {
+
+                    List includeList = (List) includesObject;
                     includes.clear();
                     for (Object inc : includeList) {
                         if (inc != null) {
-                            includes.add(inc.toString().toLowerCase());
+                            String incStr = inc.toString().toLowerCase();
+                            includes.add(incStr);
                         }
                     }
                 } else {
@@ -763,19 +796,19 @@ public class DefaultUrlMappingEvaluator implements UrlMappingEvaluator, ClassLoa
             return includes;
         }
 
-        private String establishFullURI(String uri) {
-            if (parentResources.isEmpty() /*|| inGroupConstraints*/) {
+        private String establishFullURI(String uri, List<ConstrainedProperty> constrainedList) {
+            if (parentResources.isEmpty() || inGroupConstraints) {
                 return uri;
             }
 
-            var parentResource = parentResources.peek();
+            ParentResource parentResource = parentResources.peek();
             if (CONSTRAINTS.equals(uri) && parentResource.isGroup) {
                 return uri;
             }
 
-            //inGroupConstraints = false; // will always be false here anyway
+            inGroupConstraints = false;
 
-            var uriBuilder = new StringBuilder();
+            StringBuilder uriBuilder = new StringBuilder();
 
             if (parentResource.isSingle) {
                 uriBuilder.append(parentResource.uri);
@@ -783,13 +816,13 @@ public class DefaultUrlMappingEvaluator implements UrlMappingEvaluator, ClassLoa
                 if (parentResource.controllerName != null) {
                     uriBuilder.append(parentResource.uri);
 
-                    if (!isInCollection) {
+                    if(!isInCollection) {
                         uriBuilder.append(SLASH).append(CAPTURING_WILD_CARD);
                     }
                 }
             }
 
-            if (!SLASH.equals(uri)) {
+            if(!SLASH.equals(uri)) {
                 uriBuilder.append(uri);
             }
             return uriBuilder.toString();
@@ -797,92 +830,104 @@ public class DefaultUrlMappingEvaluator implements UrlMappingEvaluator, ClassLoa
 
         private void invokeLastArgumentIfClosure(Object[] args) {
             if (args.length > 1 && args[1] instanceof Closure) {
-                ((Closure<?>) args[1]).call();
+                ((Closure) args[1]).call();
             }
         }
 
         protected void createResourceRestfulMappings(String controllerName, Object pluginName, Object namespace, String version, UrlMappingData urlData, List<ConstrainedProperty> constrainedList, List<String> includes) {
-            var constraintArray = constrainedList.toArray(new ConstrainedProperty[0]);
+            ConstrainedProperty[] constraintArray = constrainedList.toArray(new ConstrainedProperty[constrainedList.size()]);
 
             if (includes.contains(ACTION_INDEX)) {
                 // GET /$controller -> action:'index'
-                var listUrlMapping = createIndexActionResourcesRestfulMapping(controllerName, pluginName, namespace, version, urlData, constrainedList);
+                UrlMapping listUrlMapping = createIndexActionResourcesRestfulMapping(controllerName, pluginName, namespace, version, urlData, constrainedList);
                 configureUrlMapping(listUrlMapping);
             }
+
             if (includes.contains(ACTION_CREATE)) {
                 // GET /$controller/create -> action:'create'
-                var createUrlMapping = createCreateActionResourcesRestfulMapping(controllerName, pluginName, namespace, version, urlData, constraintArray);
+                UrlMapping createUrlMapping = createCreateActionResourcesRestfulMapping(controllerName, pluginName, namespace, version, urlData, constraintArray);
                 configureUrlMapping(createUrlMapping);
             }
+
             if (includes.contains(ACTION_SAVE)) {
                 // POST /$controller -> action:'save'
-                var saveUrlMapping = createSaveActionResourcesRestfulMapping(controllerName, pluginName, namespace, version, urlData, constrainedList);
+                UrlMapping saveUrlMapping = createSaveActionResourcesRestfulMapping(controllerName, pluginName, namespace, version, urlData, constrainedList);
                 configureUrlMapping(saveUrlMapping);
             }
+
             if (includes.contains(ACTION_SHOW)) {
                 // GET /$controller/$id -> action:'show'
-                var showUrlMapping = createShowActionResourcesRestfulMapping(controllerName, pluginName, namespace, version, urlData, constrainedList);
+                UrlMapping showUrlMapping = createShowActionResourcesRestfulMapping(controllerName, pluginName, namespace, version, urlData, constrainedList);
                 configureUrlMapping(showUrlMapping);
             }
+
             if (includes.contains(ACTION_EDIT)) {
                 // GET /$controller/$id/edit -> action:'edit'
-                var editUrlMapping = createEditActionResourcesRestfulMapping(controllerName, pluginName, namespace, version, urlData, constrainedList);
+                UrlMapping editUrlMapping = createEditActionResourcesRestfulMapping(controllerName, pluginName, namespace, version, urlData, constrainedList);
                 configureUrlMapping(editUrlMapping);
             }
+
             if (includes.contains(ACTION_UPDATE)) {
                 // PUT /$controller/$id -> action:'update'
-                var updateUrlMapping = createUpdateActionResourcesRestfulMapping(controllerName, pluginName, namespace, version, urlData, constrainedList);
+                UrlMapping updateUrlMapping = createUpdateActionResourcesRestfulMapping(controllerName, pluginName, namespace, version, urlData, constrainedList);
                 configureUrlMapping(updateUrlMapping);
             }
+
             if (includes.contains(ACTION_PATCH)) {
                 // PATCH /$controller/$id -> action:'patch'
-                var patchUrlMapping = createPatchActionResourcesRestfulMapping(controllerName, pluginName, namespace, version, urlData, constrainedList);
+                UrlMapping patchUrlMapping = createPatchActionResourcesRestfulMapping(controllerName, pluginName, namespace, version, urlData, constrainedList);
                 configureUrlMapping(patchUrlMapping);
             }
+
             if (includes.contains(ACTION_DELETE)) {
                 // DELETE /$controller/$id -> action:'delete'
-                var deleteUrlMapping = createDeleteActionResourcesRestfulMapping(controllerName, pluginName, namespace, version, urlData, constrainedList);
+                UrlMapping deleteUrlMapping = createDeleteActionResourcesRestfulMapping(controllerName, pluginName, namespace, version, urlData, constrainedList);
                 configureUrlMapping(deleteUrlMapping);
             }
         }
 
         protected UrlMapping createDeleteActionResourcesRestfulMapping(String controllerName, Object pluginName, Object namespace, String version, UrlMappingData urlData, List<ConstrainedProperty> constrainedList) {
-            var deleteUrlMappingData = createRelativeUrlDataWithIdAndFormat(urlData);
-            var deleteUrlMappingConstraints = createConstraintsWithIdAndFormat(constrainedList);
-            return new RegexUrlMapping(deleteUrlMappingData, controllerName, ACTION_DELETE, namespace, pluginName, null, HttpMethod.DELETE.toString(), version, deleteUrlMappingConstraints.toArray(new ConstrainedProperty[0]), grailsApplication);
+            UrlMappingData deleteUrlMappingData = createRelativeUrlDataWithIdAndFormat(urlData);
+            List<ConstrainedProperty> deleteUrlMappingConstraints = createConstraintsWithIdAndFormat(constrainedList);
+
+            return new RegexUrlMapping(deleteUrlMappingData, controllerName, ACTION_DELETE, namespace, pluginName, null, HttpMethod.DELETE.toString(), version, deleteUrlMappingConstraints.toArray(new ConstrainedProperty[deleteUrlMappingConstraints.size()]), grailsApplication);
         }
 
         protected UrlMapping createUpdateActionResourcesRestfulMapping(String controllerName, Object pluginName, Object namespace, String version, UrlMappingData urlData, List<ConstrainedProperty> constrainedList) {
-            var updateUrlMappingData = createRelativeUrlDataWithIdAndFormat(urlData);
-            var updateUrlMappingConstraints = createConstraintsWithIdAndFormat(constrainedList);
-            return new RegexUrlMapping(updateUrlMappingData, controllerName, ACTION_UPDATE, namespace, pluginName, null, HttpMethod.PUT.toString(), version, updateUrlMappingConstraints.toArray(new ConstrainedProperty[0]), grailsApplication);
+            UrlMappingData updateUrlMappingData = createRelativeUrlDataWithIdAndFormat(urlData);
+            List<ConstrainedProperty> updateUrlMappingConstraints = createConstraintsWithIdAndFormat(constrainedList);
+
+            return new RegexUrlMapping(updateUrlMappingData, controllerName, ACTION_UPDATE, namespace, pluginName, null, HttpMethod.PUT.toString(), version, updateUrlMappingConstraints.toArray(new ConstrainedProperty[updateUrlMappingConstraints.size()]), grailsApplication);
         }
 
         protected UrlMapping createPatchActionResourcesRestfulMapping(String controllerName, Object pluginName, Object namespace, String version, UrlMappingData urlData, List<ConstrainedProperty> constrainedList) {
-            var patchUrlMappingData = createRelativeUrlDataWithIdAndFormat(urlData);
-            var patchUrlMappingConstraints = createConstraintsWithIdAndFormat(constrainedList);
-            return new RegexUrlMapping(patchUrlMappingData, controllerName, ACTION_PATCH, namespace, pluginName, null, HttpMethod.PATCH.toString(), version, patchUrlMappingConstraints.toArray(new ConstrainedProperty[0]), grailsApplication);
+            UrlMappingData patchUrlMappingData = createRelativeUrlDataWithIdAndFormat(urlData);
+            List<ConstrainedProperty> patchUrlMappingConstraints = createConstraintsWithIdAndFormat(constrainedList);
+
+            return new RegexUrlMapping(patchUrlMappingData, controllerName, ACTION_PATCH, namespace, pluginName, null, HttpMethod.PATCH.toString(), version, patchUrlMappingConstraints.toArray(new ConstrainedProperty[patchUrlMappingConstraints.size()]), grailsApplication);
         }
 
         protected UrlMapping createEditActionResourcesRestfulMapping(String controllerName, Object pluginName, Object namespace, String version, UrlMappingData urlData, List<ConstrainedProperty> constrainedList) {
-            var editUrlMappingData = urlData.createRelative('/' + CAPTURING_WILD_CARD + "/edit");
-            var editUrlMappingConstraints = new ArrayList<>(constrainedList);
+            UrlMappingData editUrlMappingData = urlData.createRelative('/' + CAPTURING_WILD_CARD + "/edit");
+            List<ConstrainedProperty> editUrlMappingConstraints = new ArrayList<ConstrainedProperty>(constrainedList);
             editUrlMappingConstraints.add(new DefaultConstrainedProperty(UrlMapping.class, "id", String.class, constraintRegistry));
-            return new RegexUrlMapping(editUrlMappingData, controllerName, ACTION_EDIT, namespace, pluginName, null, HttpMethod.GET.toString(), version, editUrlMappingConstraints.toArray(new ConstrainedProperty[0]), grailsApplication);
+
+            return new RegexUrlMapping(editUrlMappingData, controllerName, ACTION_EDIT, namespace, pluginName, null, HttpMethod.GET.toString(), version, editUrlMappingConstraints.toArray(new ConstrainedProperty[editUrlMappingConstraints.size()]), grailsApplication);
         }
 
         protected UrlMapping createShowActionResourcesRestfulMapping(String controllerName, Object pluginName, Object namespace, String version, UrlMappingData urlData, List<ConstrainedProperty> constrainedList) {
-            var showUrlMappingData = createRelativeUrlDataWithIdAndFormat(urlData);
-            var showUrlMappingConstraints = createConstraintsWithIdAndFormat(constrainedList);
-            return new RegexUrlMapping(showUrlMappingData, controllerName, ACTION_SHOW, namespace, pluginName, null, HttpMethod.GET.toString(), version, showUrlMappingConstraints.toArray(new ConstrainedProperty[0]), grailsApplication);
+            UrlMappingData showUrlMappingData = createRelativeUrlDataWithIdAndFormat(urlData);
+            List<ConstrainedProperty> showUrlMappingConstraints = createConstraintsWithIdAndFormat(constrainedList);
+
+            return new RegexUrlMapping(showUrlMappingData, controllerName, ACTION_SHOW, namespace, pluginName, null, HttpMethod.GET.toString(), version, showUrlMappingConstraints.toArray(new ConstrainedProperty[showUrlMappingConstraints.size()]), grailsApplication);
         }
 
         private List<ConstrainedProperty> createConstraintsWithIdAndFormat(List<ConstrainedProperty> constrainedList) {
-            var showUrlMappingConstraints = new ArrayList<>(constrainedList);
+            List<ConstrainedProperty> showUrlMappingConstraints = new ArrayList<ConstrainedProperty>(constrainedList);
             showUrlMappingConstraints.add(new DefaultConstrainedProperty(UrlMapping.class, "id", String.class, constraintRegistry));
-            var constrainedProperty = new DefaultConstrainedProperty(UrlMapping.class, "format", String.class, constraintRegistry);
-            constrainedProperty.applyConstraint(ConstrainedProperty.NULLABLE_CONSTRAINT, true);
-            showUrlMappingConstraints.add(constrainedProperty);
+            ConstrainedProperty cp = new DefaultConstrainedProperty(UrlMapping.class, "format", String.class, constraintRegistry);
+            cp.applyConstraint(ConstrainedProperty.NULLABLE_CONSTRAINT, true);
+            showUrlMappingConstraints.add(cp);
             return showUrlMappingConstraints;
         }
 
@@ -894,28 +939,31 @@ public class DefaultUrlMappingEvaluator implements UrlMappingEvaluator, ClassLoa
             return urlData.createRelative(UrlMapping.OPTIONAL_EXTENSION_WILDCARD + UrlMapping.QUESTION_MARK);
         }
 
+
         protected UrlMapping createSaveActionResourcesRestfulMapping(String controllerName, Object pluginName, Object namespace, String version, UrlMappingData urlData, List<ConstrainedProperty> constrainedList) {
-            var saveActionUrlMappingData = urlData.createRelative(UrlMapping.OPTIONAL_EXTENSION_WILDCARD + UrlMapping.QUESTION_MARK);
-            var saveUrlMappingConstraints = createFormatOnlyConstraints(constrainedList);
-            return new RegexUrlMapping(saveActionUrlMappingData, controllerName, ACTION_SAVE, namespace, pluginName, null, HttpMethod.POST.toString(), version, saveUrlMappingConstraints.toArray(new ConstrainedProperty[0]), grailsApplication);
+            UrlMappingData saveActionUrlMappingData = urlData.createRelative(UrlMapping.OPTIONAL_EXTENSION_WILDCARD + UrlMapping.QUESTION_MARK);
+            List<ConstrainedProperty> saveUrlMappingConstraints = createFormatOnlyConstraints(constrainedList);
+
+            return new RegexUrlMapping(saveActionUrlMappingData, controllerName, ACTION_SAVE, namespace, pluginName, null, HttpMethod.POST.toString(), version, saveUrlMappingConstraints.toArray(new ConstrainedProperty[saveUrlMappingConstraints.size()]), grailsApplication);
         }
 
         protected UrlMapping createCreateActionResourcesRestfulMapping(String controllerName, Object pluginName, Object namespace, String version, UrlMappingData urlData, ConstrainedProperty[] constraintArray) {
-            var createMappingData = urlData.createRelative("/create");
+            UrlMappingData createMappingData = urlData.createRelative("/create");
             return new RegexUrlMapping(createMappingData, controllerName, ACTION_CREATE, namespace, pluginName, null, HttpMethod.GET.toString(), version, constraintArray, grailsApplication);
         }
 
         protected UrlMapping createIndexActionResourcesRestfulMapping(String controllerName, Object pluginName, Object namespace, String version, UrlMappingData urlData, List<ConstrainedProperty> constrainedList) {
-            var indexActionUrlMappingData = urlData.createRelative(UrlMapping.OPTIONAL_EXTENSION_WILDCARD + UrlMapping.QUESTION_MARK);
-            var indexUrlMappingConstraints = createFormatOnlyConstraints(constrainedList);
-            return new RegexUrlMapping(indexActionUrlMappingData, controllerName, ACTION_INDEX, namespace, pluginName, null, HttpMethod.GET.toString(), version, indexUrlMappingConstraints.toArray(new ConstrainedProperty[0]), grailsApplication);
+            UrlMappingData indexActionUrlMappingData = urlData.createRelative(UrlMapping.OPTIONAL_EXTENSION_WILDCARD + UrlMapping.QUESTION_MARK);
+            List<ConstrainedProperty> indexUrlMappingConstraints = createFormatOnlyConstraints(constrainedList);
+
+            return new RegexUrlMapping(indexActionUrlMappingData, controllerName, ACTION_INDEX, namespace, pluginName, null, HttpMethod.GET.toString(), version, indexUrlMappingConstraints.toArray(new ConstrainedProperty[indexUrlMappingConstraints.size()]), grailsApplication);
         }
 
         private List<ConstrainedProperty> createFormatOnlyConstraints(List<ConstrainedProperty> constrainedList) {
-            var indexUrlMappingConstraints = new ArrayList<>(constrainedList);
-            var constrainedProperty = new DefaultConstrainedProperty(UrlMapping.class, "format", String.class, constraintRegistry);
-            constrainedProperty.applyConstraint(ConstrainedProperty.NULLABLE_CONSTRAINT, true);
-            indexUrlMappingConstraints.add(constrainedProperty);
+            List<ConstrainedProperty> indexUrlMappingConstraints = new ArrayList<ConstrainedProperty>(constrainedList);
+            ConstrainedProperty cp = new DefaultConstrainedProperty(UrlMapping.class, "format", String.class, constraintRegistry);
+            cp.applyConstraint(ConstrainedProperty.NULLABLE_CONSTRAINT, true);
+            indexUrlMappingConstraints.add(cp);
             return indexUrlMappingConstraints;
         }
 
@@ -924,85 +972,89 @@ public class DefaultUrlMappingEvaluator implements UrlMappingEvaluator, ClassLoa
          *
          * @param controllerName The controller name
          * @param pluginName     The name of the plugin
-         * @param namespace      The namespace
-         * @param version        The version
+         * @param namespace
+         * @param version
          * @param urlData        The urlData instance
-         * @param includes       The includes
+         * @param includes
          */
         protected void createSingleResourceRestfulMappings(String controllerName, Object pluginName, Object namespace, String version, UrlMappingData urlData, List<ConstrainedProperty> constrainedList, List<String> includes) {
 
-            var constraintArray = constrainedList.toArray(new ConstrainedProperty[0]);
+            ConstrainedProperty[] constraintArray = constrainedList.toArray(new ConstrainedProperty[constrainedList.size()]);
 
             if (includes.contains(ACTION_CREATE)) {
                 // GET /$controller/create -> action: 'create'
-                var createUrlMapping = createCreateActionResourcesRestfulMapping(controllerName, pluginName, namespace, version, urlData, constraintArray);
+                UrlMapping createUrlMapping = createCreateActionResourcesRestfulMapping(controllerName, pluginName, namespace, version, urlData, constraintArray);
                 configureUrlMapping(createUrlMapping);
             }
 
             if (includes.contains(ACTION_SAVE)) {
                 // POST /$controller -> action:'save'
-                var saveUrlMapping = createSaveActionResourcesRestfulMapping(controllerName, pluginName, namespace, version, urlData, constrainedList);
+                UrlMapping saveUrlMapping = createSaveActionResourcesRestfulMapping(controllerName, pluginName, namespace, version, urlData, constrainedList);
                 configureUrlMapping(saveUrlMapping);
             }
 
             if (includes.contains(ACTION_SHOW)) {
                 // GET /$controller -> action:'show'
-                var showUrlMapping = createShowActionResourceRestfulMapping(controllerName, pluginName, namespace, version, urlData, constrainedList);
+                UrlMapping showUrlMapping = createShowActionResourceRestfulMapping(controllerName, pluginName, namespace, version, urlData, constrainedList);
                 configureUrlMapping(showUrlMapping);
             }
 
             if (includes.contains(ACTION_EDIT)) {
                 // GET /$controller/edit -> action:'edit'
-                var editUrlMapping = createEditActionResourceRestfulMapping(controllerName, pluginName, namespace, version, urlData, constraintArray);
+                UrlMapping editUrlMapping = createEditActionResourceRestfulMapping(controllerName, pluginName, namespace, version, urlData, constraintArray);
                 configureUrlMapping(editUrlMapping);
             }
 
             if (includes.contains(ACTION_UPDATE)) {
                 // PUT /$controller -> action:'update'
-                var updateUrlMapping = createUpdateActionResourceRestfulMapping(controllerName, pluginName, namespace, version, urlData, constrainedList);
+                UrlMapping updateUrlMapping = createUpdateActionResourceRestfulMapping(controllerName, pluginName, namespace, version, urlData, constrainedList);
                 configureUrlMapping(updateUrlMapping);
             }
 
             if (includes.contains(ACTION_PATCH)) {
                 // PATCH /$controller -> action:'patch'
-                var patchUrlMapping = createPatchActionResourceRestfulMapping(controllerName, pluginName, namespace, version, urlData, constrainedList);
+                UrlMapping patchUrlMapping = createPatchActionResourceRestfulMapping(controllerName, pluginName, namespace, version, urlData, constrainedList);
                 configureUrlMapping(patchUrlMapping);
             }
 
             if (includes.contains(ACTION_DELETE)) {
                 // DELETE /$controller -> action:'delete'
-                var deleteUrlMapping = createDeleteActionResourceRestfulMapping(controllerName, pluginName, namespace, version, urlData, constrainedList);
+                UrlMapping deleteUrlMapping = createDeleteActionResourceRestfulMapping(controllerName, pluginName, namespace, version, urlData, constrainedList);
                 configureUrlMapping(deleteUrlMapping);
             }
         }
 
         protected UrlMapping createDeleteActionResourceRestfulMapping(String controllerName, Object pluginName, Object namespace, String version, UrlMappingData urlData, List<ConstrainedProperty> constrainedList) {
-            var deleteUrlMappingData = createFormatOnlyUrlMappingData(urlData);
-            var deleteUrlMappingConstraints = createFormatOnlyConstraints(constrainedList);
-            return new RegexUrlMapping(deleteUrlMappingData, controllerName, ACTION_DELETE, namespace, pluginName, null, HttpMethod.DELETE.toString(), version, deleteUrlMappingConstraints.toArray(new ConstrainedProperty[0]), grailsApplication);
+            UrlMappingData deleteUrlMappingData = createFormatOnlyUrlMappingData(urlData);
+            List<ConstrainedProperty> deleteUrlMappingConstraints = createFormatOnlyConstraints(constrainedList);
+
+            return new RegexUrlMapping(deleteUrlMappingData, controllerName, ACTION_DELETE, namespace, pluginName, null, HttpMethod.DELETE.toString(), version, deleteUrlMappingConstraints.toArray(new ConstrainedProperty[deleteUrlMappingConstraints.size()]), grailsApplication);
         }
 
         protected UrlMapping createUpdateActionResourceRestfulMapping(String controllerName, Object pluginName, Object namespace, String version, UrlMappingData urlData, List<ConstrainedProperty> constrainedList) {
-            var updateUrlMappingData = createFormatOnlyUrlMappingData(urlData);
-            var updateUrlMappingConstraints = createFormatOnlyConstraints(constrainedList);
-            return new RegexUrlMapping(updateUrlMappingData, controllerName, ACTION_UPDATE, namespace, pluginName, null, HttpMethod.PUT.toString(), version, updateUrlMappingConstraints.toArray(new ConstrainedProperty[0]), grailsApplication);
+            UrlMappingData updateUrlMappingData = createFormatOnlyUrlMappingData(urlData);
+            List<ConstrainedProperty> updateUrlMappingConstraints = createFormatOnlyConstraints(constrainedList);
+
+            return new RegexUrlMapping(updateUrlMappingData, controllerName, ACTION_UPDATE, namespace, pluginName, null, HttpMethod.PUT.toString(), version, updateUrlMappingConstraints.toArray(new ConstrainedProperty[updateUrlMappingConstraints.size()]), grailsApplication);
         }
 
         protected UrlMapping createPatchActionResourceRestfulMapping(String controllerName, Object pluginName, Object namespace, String version, UrlMappingData urlData, List<ConstrainedProperty> constrainedList) {
-            var patchUrlMappingData = createFormatOnlyUrlMappingData(urlData);
-            var patchUrlMappingConstraints = createFormatOnlyConstraints(constrainedList);
-            return new RegexUrlMapping(patchUrlMappingData, controllerName, ACTION_PATCH, namespace, pluginName, null, HttpMethod.PATCH.toString(), version, patchUrlMappingConstraints.toArray(new ConstrainedProperty[0]), grailsApplication);
+            UrlMappingData patchUrlMappingData = createFormatOnlyUrlMappingData(urlData);
+            List<ConstrainedProperty> patchUrlMappingConstraints = createFormatOnlyConstraints(constrainedList);
+
+            return new RegexUrlMapping(patchUrlMappingData, controllerName, ACTION_PATCH, namespace, pluginName, null, HttpMethod.PATCH.toString(), version, patchUrlMappingConstraints.toArray(new ConstrainedProperty[patchUrlMappingConstraints.size()]), grailsApplication);
         }
 
         protected UrlMapping createEditActionResourceRestfulMapping(String controllerName, Object pluginName, Object namespace, String version, UrlMappingData urlData, ConstrainedProperty[] constraintArray) {
-            var editMappingData = urlData.createRelative("/edit");
+            UrlMappingData editMappingData = urlData.createRelative("/edit");
             return new RegexUrlMapping(editMappingData, controllerName, ACTION_EDIT, namespace, pluginName, null, HttpMethod.GET.toString(), version, constraintArray, grailsApplication);
         }
 
         protected UrlMapping createShowActionResourceRestfulMapping(String controllerName, Object pluginName, Object namespace, String version, UrlMappingData urlData, List<ConstrainedProperty> constrainedList) {
-            var showUrlMappingData = createFormatOnlyUrlMappingData(urlData);
-            var showUrlMappingConstraints = createFormatOnlyConstraints(constrainedList);
-            return new RegexUrlMapping(showUrlMappingData, controllerName, ACTION_SHOW, namespace, pluginName, null, HttpMethod.GET.toString(), version, showUrlMappingConstraints.toArray(new ConstrainedProperty[0]), grailsApplication);
+            UrlMappingData showUrlMappingData = createFormatOnlyUrlMappingData(urlData);
+            List<ConstrainedProperty> showUrlMappingConstraints = createFormatOnlyConstraints(constrainedList);
+
+            return new RegexUrlMapping(showUrlMappingData, controllerName, ACTION_SHOW, namespace, pluginName, null, HttpMethod.GET.toString(), version, showUrlMappingConstraints.toArray(new ConstrainedProperty[showUrlMappingConstraints.size()]), grailsApplication);
         }
 
         @SuppressWarnings("unchecked")
@@ -1014,6 +1066,7 @@ public class DefaultUrlMappingEvaluator implements UrlMappingEvaluator, ClassLoa
                         parameterValues.put(key, vars.get(key));
                     }
                 }
+
                 binding.getVariables().clear();
             }
 
@@ -1027,20 +1080,22 @@ public class DefaultUrlMappingEvaluator implements UrlMappingEvaluator, ClassLoa
             if (urlMapping.getActionName() != null) {
                 parameterValues.put("action", urlMapping.getActionName());
             }
-            urlMapping.setParameterValues(new LinkedHashMap<>(parameterValues));
+
+            urlMapping.setParameterValues(new LinkedHashMap(parameterValues));
             urlMappings.add(urlMapping);
         }
 
         private boolean isNotCoreMappingKey(Object key) {
-            return !ACTION.equals(key) &&
-                   !CONTROLLER.equals(key) &&
-                   !VIEW.equals(key);
+            return !GrailsControllerClass.ACTION.equals(key) &&
+                    !GrailsControllerClass.CONTROLLER.equals(key) &&
+                    !GrailsControllerClass.VIEW.equals(key);
         }
 
         private UrlMappingData createUrlMappingData(String methodName, boolean responseCode) {
             if (!responseCode) {
                 return urlParser.parse(methodName);
             }
+
             return new ResponseCodeMappingData(methodName);
         }
 
@@ -1048,27 +1103,29 @@ public class DefaultUrlMappingEvaluator implements UrlMappingEvaluator, ClassLoa
             for (int count = s.length(), i = 0; i < count; i++) {
                 if (!Character.isDigit(s.charAt(i))) return false;
             }
+
             return true;
         }
 
-        private UrlMapping getURLMappingForNamedArgs(Map<?,?> namedArguments, UrlMappingData urlData, String mapping, boolean isResponseCode, List<ConstrainedProperty> constrainedList) {
-            Map<?,?> bindingVariables = binding != null ? binding.getVariables() : null;
-            var controllerName = getControllerName(namedArguments, bindingVariables);
-            var actionName = getActionName(namedArguments, bindingVariables);
-            var pluginName = getPluginName(namedArguments, bindingVariables);
-            var httpMethod = getHttpMethod(namedArguments, bindingVariables);
-            var version = getVersion(namedArguments, bindingVariables);
-            var namespace = getNamespace(namedArguments, bindingVariables);
-            var redirectInfo = getRedirectInfo(namedArguments, bindingVariables);
+        private UrlMapping getURLMappingForNamedArgs(Map namedArguments,
+                                                     UrlMappingData urlData, String mapping, boolean isResponseCode, List<ConstrainedProperty> constrainedList) {
+            final Map bindingVariables = binding != null ? binding.getVariables() : null;
+            Object controllerName = getControllerName(namedArguments, bindingVariables);
+            Object actionName = getActionName(namedArguments, bindingVariables);
+            Object pluginName = getPluginName(namedArguments, bindingVariables);
+            Object httpMethod = getHttpMethod(namedArguments, bindingVariables);
+            Object version = getVersion(namedArguments, bindingVariables);
+            Object namespace = getNamespace(namedArguments, bindingVariables);
+            Object redirectInfo = getRedirectInfo(namedArguments, bindingVariables);
 
-            var viewName = getViewName(namedArguments, bindingVariables);
+            Object viewName = getViewName(namedArguments, bindingVariables);
             if (actionName != null && viewName != null) {
                 viewName = null;
-                log.warn("Both [action] and [view] specified in URL mapping [{}]. The action takes precedence!", mapping);
+                LOG.warn("Both [action] and [view] specified in URL mapping [" + mapping + "]. The action takes precendence!");
             }
 
-            var uri = getURI(namedArguments, bindingVariables);
-            var constraints = constrainedList.toArray(new ConstrainedProperty[0]);
+            Object uri = getURI(namedArguments, bindingVariables);
+            ConstrainedProperty[] constraints = constrainedList.toArray(new ConstrainedProperty[constrainedList.size()]);
 
             UrlMapping urlMapping;
             if (uri != null) {
@@ -1083,47 +1140,50 @@ public class DefaultUrlMappingEvaluator implements UrlMappingEvaluator, ClassLoa
                 urlMapping = createURLMapping(urlData, isResponseCode, redirectInfo, controllerName, actionName, namespace, pluginName, viewName, httpMethod != null ? httpMethod.toString() : null, version != null ? version.toString() : null, constraints);
             }
 
-            var exceptionArg = getException(namedArguments, bindingVariables);
+            Object exceptionArg = getException(namedArguments, bindingVariables);
 
             if (isResponseCode && exceptionArg != null) {
-                if (exceptionArg instanceof Class<?>) {
-                    Class<?> exClass = (Class<?>) exceptionArg;
+                if (exceptionArg instanceof Class) {
+                    Class exClass = (Class) exceptionArg;
                     if (Throwable.class.isAssignableFrom(exClass)) {
                         ((ResponseCodeUrlMapping) urlMapping).setExceptionType(exClass);
                     } else {
-                        log.error("URL mapping argument [exception] with value [{}] must be a subclass of java.lang.Throwable", exceptionArg);
+                        LOG.error("URL mapping argument [exception] with value [" + exceptionArg + "] must be a subclass of java.lang.Throwable");
                     }
                 } else {
-                    log.error("URL mapping argument [exception] with value [{}] must be a valid class", exceptionArg);
+                    LOG.error("URL mapping argument [exception] with value [" + exceptionArg + "] must be a valid class");
                 }
             }
 
-            var parseRequest = getParseRequest(namedArguments, bindingVariables);
+            Object parseRequest = getParseRequest(namedArguments, bindingVariables);
             if (parseRequest instanceof Boolean) {
                 urlMapping.setParseRequest((Boolean) parseRequest);
             }
 
+
             return urlMapping;
         }
 
-        private Object getVariableFromNamedArgsOrBinding(Map<?,?> namedArguments, Map<?,?> bindingVariables, String variableName, Object defaultValue) {
-            var returnValue = namedArguments.get(variableName);
+        private Object getVariableFromNamedArgsOrBinding(Map namedArguments, Map bindingVariables, String variableName, Object defaultValue) {
+
+            Object returnValue;
+            returnValue = namedArguments.get(variableName);
             if (returnValue == null) {
                 returnValue = binding != null ? bindingVariables.get(variableName) : defaultValue;
             }
             return returnValue;
         }
 
-        private Object getActionName(Map<?,?> namedArguments, Map<?,?> bindingVariables) {
-            return getVariableFromNamedArgsOrBinding(namedArguments, bindingVariables, ACTION, getMetaMappingInfo().getAction());
+        private Object getActionName(Map namedArguments, Map bindingVariables) {
+            return getVariableFromNamedArgsOrBinding(namedArguments, bindingVariables, GrailsControllerClass.ACTION, getMetaMappingInfo().getAction());
         }
 
-        private Object getParseRequest(Map<?,?> namedArguments, Map<?,?> bindingVariables) {
+        private Object getParseRequest(Map namedArguments, Map bindingVariables) {
             return getVariableFromNamedArgsOrBinding(namedArguments, bindingVariables, PARSE_REQUEST, parseRequest);
         }
 
-        private Object getControllerName(Map<?,?> namedArguments, Map<?,?> bindingVariables) {
-            Object fromBinding = getVariableFromNamedArgsOrBinding(namedArguments, bindingVariables, CONTROLLER, getMetaMappingInfo().getController());
+        private Object getControllerName(Map namedArguments, Map bindingVariables) {
+            Object fromBinding = getVariableFromNamedArgsOrBinding(namedArguments, bindingVariables, GrailsControllerClass.CONTROLLER, getMetaMappingInfo().getController());
             if(fromBinding == null && !parentResources.isEmpty()) {
                 return parentResources.peekLast().controllerName;
             }
@@ -1132,35 +1192,35 @@ public class DefaultUrlMappingEvaluator implements UrlMappingEvaluator, ClassLoa
             }
         }
 
-        private Object getPluginName(Map<?,?> namedArguments, Map<?,?> bindingVariables) {
-            return getVariableFromNamedArgsOrBinding(namedArguments, bindingVariables, PLUGIN, getMetaMappingInfo().getPlugin());
+        private Object getPluginName(Map namedArguments, Map bindingVariables) {
+            return getVariableFromNamedArgsOrBinding(namedArguments, bindingVariables, UrlMapping.PLUGIN, getMetaMappingInfo().getPlugin());
         }
 
-        private Object getHttpMethod(Map<?,?> namedArguments, Map<?,?> bindingVariables) {
-            return getVariableFromNamedArgsOrBinding(namedArguments, bindingVariables, HTTP_METHOD, getMetaMappingInfo().getHttpMethod());
+        private Object getHttpMethod(Map namedArguments, Map bindingVariables) {
+            return getVariableFromNamedArgsOrBinding(namedArguments, bindingVariables, UrlMapping.HTTP_METHOD, getMetaMappingInfo().getHttpMethod());
         }
 
-        private Object getRedirectInfo(Map<?,?> namedArguments, Map<?,?> bindingVariables) {
+        private Object getRedirectInfo(Map namedArguments, Map bindingVariables) {
             return getVariableFromNamedArgsOrBinding(namedArguments, bindingVariables, UrlMapping.REDIRECT_INFO, getMetaMappingInfo().getRedirectInfo());
         }
 
-        private Object getVersion(Map<?,?> namedArguments, Map<?,?> bindingVariables) {
+        private Object getVersion(Map namedArguments, Map bindingVariables) {
             return getVariableFromNamedArgsOrBinding(namedArguments, bindingVariables, UrlMapping.VERSION, getMetaMappingInfo().getView());
         }
 
-        private Object getNamespace(Map<?,?> namedArguments, Map<?,?> bindingVariables) {
-            return getVariableFromNamedArgsOrBinding(namedArguments, bindingVariables, NAMESPACE, getMetaMappingInfo().getNamespace());
+        private Object getNamespace(Map namedArguments, Map bindingVariables) {
+            return getVariableFromNamedArgsOrBinding(namedArguments, bindingVariables, UrlMapping.NAMESPACE, getMetaMappingInfo().getNamespace());
         }
 
-        private Object getViewName(Map<?,?> namedArguments, Map<?,?> bindingVariables) {
-            return getVariableFromNamedArgsOrBinding(namedArguments, bindingVariables, VIEW, getMetaMappingInfo().getView());
+        private Object getViewName(Map namedArguments, Map bindingVariables) {
+            return getVariableFromNamedArgsOrBinding(namedArguments, bindingVariables, GrailsControllerClass.VIEW, getMetaMappingInfo().getView());
         }
 
-        private Object getURI(Map<?,?> namedArguments, Map<?,?> bindingVariables) {
+        private Object getURI(Map namedArguments, Map bindingVariables) {
             return getVariableFromNamedArgsOrBinding(namedArguments, bindingVariables, UrlMapping.URI, getMetaMappingInfo().getUri());
         }
 
-        private Object getException(Map<?,?> namedArguments, Map<?,?> bindingVariables) {
+        private Object getException(Map namedArguments, Map bindingVariables) {
             return getVariableFromNamedArgsOrBinding(namedArguments, bindingVariables, EXCEPTION, exception);
         }
 
@@ -1176,10 +1236,10 @@ public class DefaultUrlMappingEvaluator implements UrlMappingEvaluator, ClassLoa
         }
 
         protected MetaMappingInfo pushNewMetaMappingInfo() {
-            var mappingInfo = new MetaMappingInfo();
-            var parentMappingInfo = mappingInfoDeque.peek();
+            MetaMappingInfo mappingInfo = new MetaMappingInfo();
+            MetaMappingInfo parentMappingInfo = mappingInfoDeque.peek();
             if (parentMappingInfo != null) {
-                var parentMappingConstraints = parentMappingInfo.getConstraints();
+                List<ConstrainedProperty> parentMappingConstraints = parentMappingInfo.getConstraints();
                 if (parentMappingConstraints != null) {
                     mappingInfo.getConstraints().addAll(parentMappingConstraints);
                 }
@@ -1190,7 +1250,7 @@ public class DefaultUrlMappingEvaluator implements UrlMappingEvaluator, ClassLoa
                     }
                 }
             }
-            if (!previousConstraints.isEmpty()) {
+            if (previousConstraints.size() > 0) {
                 mappingInfo.getConstraints().addAll(previousConstraints);
                 previousConstraints.clear();
             }
@@ -1203,7 +1263,7 @@ public class DefaultUrlMappingEvaluator implements UrlMappingEvaluator, ClassLoa
             return mappingInfoDeque.peek();
         }
 
-        static class ParentResource {
+        class ParentResource {
             String controllerName;
             String uri;
             boolean isSingle;
@@ -1212,32 +1272,33 @@ public class DefaultUrlMappingEvaluator implements UrlMappingEvaluator, ClassLoa
             ParentResource(String controllerName, String uri, boolean single) {
                 this.controllerName = controllerName;
                 this.uri = uri;
-                this.isSingle = single;
-                this.isGroup = false;
+                isSingle = single;
+                isGroup = false;
             }
 
             ParentResource(String controllerName, String uri, boolean single, boolean group) {
                 this.controllerName = controllerName;
                 this.uri = uri;
-                this.isSingle = single;
-                this.isGroup = group;
+                isSingle = single;
+                isGroup = group;
             }
         }
     }
 
     class UrlGroupMappingRecursionBuilder extends UrlMappingBuilder {
-        private final ParentResource parentResource;
-
+        private ParentResource parentResource;
         public UrlGroupMappingRecursionBuilder(UrlMappingBuilder parent, ParentResource parentResource) {
             super(parent);
+
             this.parentResource = parentResource;
         }
 
         @Override
-        public void group(String uri, Closure<?> mappings) {
+        public void group(String uri, Closure mappings) {
             if (parentResource != null) {
                 uri = parentResource.uri.concat(uri);
             }
+
             super.group(uri, mappings);
         }
     }
